# fti-ft-wam

./: .gitignore  CMakeLists.txt  README.md  gitignore
cal/FT9235/: FT9235.cal
cal/FT9236/: FT9236.cal
config/zeus/: wam4.conf  wam7w.conf
config/zeus/calibration_data/wam4/: gravitycal.conf
config/zeus/calibration_data/wam7w/: gravitycal.conf
data/: FT9235_force_20260504_122440.csv  ft_data_1.csv  ft_data_2.csv  ft_data_3.csv  ft_data_4.csv  ft_libbarrett_log.csv
include/: atift_reader.hpp  atift_system.hpp  bj_transformation.hpp  ft_csv_logger.hpp  jacobian.hpp  tb_transformation.hpp
scripts/: can_init.sh  plot_data.py  plot_libbarrett_data.py  setup_zeus.sh
src/: ft_compensation.cpp  record.cpp  test.cpp  test_ft_system.cpp
